--- a/cifar.ipynb
+++ b/cifar.ipynb
@@ -104,7 +104,7 @@
     "            ConvBlock(conv_dim * 4, conv_dim * 8, 4),  # Extra layer\n",
     "            \n",
     "            nn.Flatten(),\n",
-    "            nn.Linear(conv_dim * 8 * 2 * 2, 1)  # Adjusted for 64x64 output\n",
+    "            nn.Linear(conv_dim * 8 * 2 * 2, 1)  # For 32x32 input: 2x2 spatial\n",
     "        )\n",
     "        \n",
     "    def forward(self, x):\n",
@@ -199,7 +199,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10: 100%|██████████| 391/391 [01:41<00:00,  3.87it/s]\n"
+      "Epoch 1/10: 100%|\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6| 391/391 [01:41<00:00,  3.87it/s]\n"
      ]
     },
     {
@@ -223,7 +223,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 2/10: 100%|██████████| 391/391 [01:46<00:00,  3.69it/s]\n"
+      "Epoch 2/10: 100%|\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6| 391/391 [01:46<00:00,  3.69it/s]\n"
      ]
     },
     {
@@ -247,7 +247,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 3/10: 100%|██████████| 391/391 [01:40<00:00,  3.89it/s]\n"
+      "Epoch 3/10: 100%|\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6| 391/391 [01:40<00:00,  3.89it/s]\n"
      ]
     },
     {
@@ -271,7 +271,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 4/10: 100%|██████████| 391/391 [01:38<00:00,  3.99it/s]\n"
+      "Epoch 4/10: 100%|\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6| 391/391 [01:38<00:00,  3.99it/s]\n"
      ]
     },
     {
@@ -295,7 +295,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 5/10: 100%|██████████| 391/391 [01:40<00:00,  3.88it/s]\n"
+      "Epoch 5/10: 100%|\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6| 391/391 [01:40<00:00,  3.88it/s]\n"
      ]
     },
     {
@@ -319,7 +319,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 6/10: 100%|██████████| 391/391 [01:48<00:00,  3.60it/s]\n"
+      "Epoch 6/10: 100%|\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6| 391/391 [01:48<00:00,  3.60it/s]\n"
      ]
     },
     {
@@ -343,7 +343,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 7/10: 100%|██████████| 391/391 [01:40<00:00,  3.90it/s]\n"
+      "Epoch 7/10: 100%|\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6| 391/391 [01:40<00:00,  3.90it/s]\n"
      ]
     },
     {
@@ -367,7 +367,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 8/10: 100%|██████████| 391/391 [01:41<00:00,  3.85it/s]\n"
+      "Epoch 8/10: 100%|\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6| 391/391 [01:41<00:00,  3.85it/s]\n"
      ]
     },
     {
@@ -391,7 +391,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 9/10: 100%|██████████| 391/391 [01:40<00:00,  3.89it/s]\n"
+      "Epoch 9/10: 100%|\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6| 391/391 [01:40<00:00,  3.89it/s]\n"
      ]
     },
     {
@@ -415,7 +415,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Epoch 10/10: 100%|██████████| 391/391 [01:46<00:00,  3.68it/s]\n"
+      "Epoch 10/10: 100%|\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6\u00e2\u2013\u02c6| 391/391 [01:46<00:00,  3.68it/s]\n"
      ]
     },
     {
