changes to loss functions

--- a/dlnd_face_generation.ipynb
+++ b/dlnd_face_generation.ipynb
@@ -576,16 +576,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def generator_step(batch_size: int, latent_dim: int, device) -> Dict:\n",
+    "def generator_step(generator: nn.Module, discriminator: nn.Module, \n",
+    "                   gen_optimizer: torch.optim.Optimizer, batch_size: int, \n",
+    "                   latent_dim: int, device: str) -> Dict:\n",
     "    \"\"\" One training step of the generator. \"\"\"\n",
-    "    # TODO: implement the generator step (foward pass, loss calculation and backward pass)\n",
-    "    return {'loss': g_loss}\n",
+    "    generator.train()\n",
+    "    gen_optimizer.zero_grad()\n",
     "\n",
+    "    noise = np.random.normal(0, 1, (batch_size, latent_dim, 1, 1))\n",
+    "    noise = torch.tensor(noise, dtype=torch.float).to(device)\n",
+    "    fake_images = generator(noise)\n",
+    "    fake_logits = discriminator(fake_images)\n",
     "\n",
-    "def discriminator_step(batch_size: int, latent_dim: int, real_images: torch.Tensor, device) -> Dict:\n",
+    "    g_loss = generator_loss(fake_logits, device)\n",
+    "    g_loss.backward()\n",
+    "    gen_optimizer.step()\n",
+    "\n",
+    "    return {'loss': g_loss.item()}\n",
+    "\n",
+    "def discriminator_step(discriminator: nn.Module, generator: nn.Module, \n",
+    "                       disc_optimizer: torch.optim.Optimizer, batch_size: int, \n",
+    "                       latent_dim: int, real_images: torch.Tensor, \n",
+    "                       device: str) -> Dict:\n",
     "    \"\"\" One training step of the discriminator. \"\"\"\n",
-    "    # TODO: implement the discriminator step (foward pass, loss calculation and backward pass)\n",
-    "    return {'loss': d_loss, 'gp': gp}"
+    "    discriminator.train()\n",
+    "    disc_optimizer.zero_grad()\n",
+    "\n",
+    "    # Generate fake images\n",
+    "    noise = np.random.normal(0, 1, (batch_size, latent_dim, 1, 1))\n",
+    "    noise = torch.tensor(noise, dtype=torch.float).to(device)\n",
+    "    fake_images = generator(noise)\n",
+    "\n",
+    "    # Get discriminator logits for real and fake images\n",
+    "    real_logits = discriminator(real_images)\n",
+    "    fake_logits = discriminator(fake_images.detach())\n",
+    "\n",
+    "    # Calculate losses\n",
+    "    d_loss = discriminator_loss(real_logits, fake_logits, device)\n",
+    "    d_loss.backward()\n",
+    "    disc_optimizer.step()\n",
+    "\n",
+    "    return {'loss': d_loss.item()}"
    ]
   },
   {
@@ -702,11 +733,13 @@
     "    for batch_i, real_images in enumerate(dataloader):\n",
     "        real_images = real_images.to(device)\n",
     "        \n",
-    "        ####################################\n",
+    "        # train the discriminator\n",
+    "        d_loss = discriminator_step(discriminator, generator, d_optimizer, \n",
+    "                                    batch_size, latent_dim, real_images, device)\n",
     "        \n",
-    "        # TODO: implement the training strategy\n",
-    "        \n",
-    "        ####################################\n",
+    "        # train the generator\n",
+    "        g_loss = generator_step(generator, discriminator, g_optimizer, \n",
+    "                                batch_size, latent_dim, device)\n",
     "        \n",
     "        if batch_i % print_every == 0:\n",
     "            # append discriminator loss and generator loss\n",
@@ -715,13 +748,13 @@
     "            losses.append((d, g))\n",
     "            # print discriminator and generator loss\n",
     "            time = str(datetime.now()).split('.')[0]\n",
-    "            print(f'{time} | Epoch [{epoch+1}/{n_epochs}] | Batch {batch_i}/{len(dataloader)} | d_loss: {d:.4f} | g_loss: {g:.4f}')\n",
+    "            print(f'{time} | Epoch [{epoch+1}/{n_epochs}] | Batch {batch_i}/{len(dataloader)} | ',\n",
+    "                  f'd_loss: {d:.4f} | g_loss: {g:.4f}')\n",
     "    \n",
     "    # display images during training\n",
     "    generator.eval()\n",
     "    generated_images = generator(fixed_latent_vector)\n",
-    "    display(generated_images)\n",
-    "    generator.train()"
+    "    display(generated_images)"
    ]
   },
   {
