changes to loss functions

--- a/dlnd_face_generation.ipynb
+++ b/dlnd_face_generation.ipynb
@@ -489,11 +489,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def generator_loss(fake_logits, device):\n",
+    "    fake_logits = fake_logits.view(fake_logits.size(0), -1)\n",
     "    labels = torch.ones_like(fake_logits)\n",
     "    labels = labels.to(device)\n",
     "    criterion = nn.BCEWithLogitsLoss()\n",
@@ -511,11 +512,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def discriminator_loss(real_logits, fake_logits, device):\n",
+    "    real_logits = real_logits.view(real_logits.size(0), -1)\n",
+    "    fake_logits = fake_logits.view(fake_logits.size(0), -1)\n",
     "    real_labels = torch.ones_like(real_logits).to(device)\n",
     "    fake_labels = torch.zeros_like(fake_logits).to(device)\n",
     "    criterion = nn.BCEWithLogitsLoss()\n",
