change to eigenloss

--- a/dlnd_face_generation/dlnd_face_generation4.ipynb
+++ b/dlnd_face_generation/dlnd_face_generation4.ipynb
@@ -846,6 +846,7 @@
         "fixed_latent_vector = torch.randn(16, latent_dim, 1, 1).float().to(device)\n",
         "\n",
         "losses = []\n",
+        "eigen_losses = []\n",
         "minimum_eigenloss = 1.0\n",
         "for epoch in range(n_epochs):\n",
         "    for batch_i, real_images in enumerate(dataloader):\n",
@@ -878,6 +879,7 @@
         "    \n",
         "    # compute eigenloss to evaluate generated images\n",
         "    eigen_loss = gen_eigenloss.compute_loss(generated_images).item()\n",
+        "    eigen_losses.append(eigen_loss)\n",
         "    print(f'Eigenloss of generated images: {eigen_loss}')\n",
         "    if eigen_loss < minimum_eigenloss:\n",
         "        print('New minimum, saving generator weights...')\n",
@@ -983,7 +985,7 @@
         "\n",
         "### Data qualities\n",
         "\n",
-        "- Bias: This is pretty much an obvious issue, stemming from the biased datase being used. Wider of represeentative sample of human faces would mae a more representative generation -- not just in terms of race, but also age or other characteristics such as expressions and even different lighting. A wider datase of \"faces in the wild\" may produce a better representative sample as well.\n",
+        "- Bias: This is pretty much an obvious issue, stemming from the biased datbase being used. A wider representative sample of human faces would make for a more representative generative model -- not just in terms of race, but also in terms of age and other characteristics, such as facial expressions. A wider datbase of \"faces in the wild\" may produce a more representative sample.\n",
         "\n",
         "- More data. Parallel with this notebook I had previous run the same architecture but with the larger CelebA dataset. There with a 128 batch size each epoch trained on 1583 batches. This resulted in better quality generations sooner. More data will give the model more diversity here as well.\n",
         "\n",
