prepare for next run

--- a/dlnd_face_generation/dlnd_face_generation4.ipynb
+++ b/dlnd_face_generation/dlnd_face_generation4.ipynb
@@ -825,7 +825,7 @@
       "outputs": [],
       "source": [
         "print('Training the eigenloss...')\n",
-        "gen_eigenloss = get_eigenloss(dataloader, n_components=100, n_batches=100)"
+        "gen_eigenloss = get_eigenloss(dataloader, n_components=200, n_batches=200)"
       ]
     },
     {
@@ -843,7 +843,7 @@
       },
       "outputs": [],
       "source": [
-        "fixed_latent_vector = torch.randn(16, latent_dim, 1, 1).float().to(device)\n",
+        "fixed_latent_vector = torch.randn(128, latent_dim, 1, 1).float().to(device)\n",
         "\n",
         "losses = []\n",
         "eigen_losses = []\n",
@@ -875,7 +875,7 @@
         "    generator.eval()\n",
         "    generated_images = generator(fixed_latent_vector)\n",
         "    print('\\n')\n",
-        "    display(generated_images)\n",
+        "    display(generated_images[:16])\n",
         "    \n",
         "    # compute eigenloss to evaluate generated images\n",
         "    eigen_loss = gen_eigenloss.compute_loss(generated_images).item()\n",
@@ -929,6 +929,29 @@
     },
     {
       "cell_type": "markdown",
+      "id": "812e9813",
+      "metadata": {},
+      "source": [
+        "Plot the eigenlosses"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "b621b2a3",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "plt.plot(eigen_losses, label='Eigenloss', color='green')\n",
+        "plt.title(\"Eigenloss Over Time\")\n",
+        "plt.xlabel(\"Epoch\")\n",
+        "plt.ylabel(\"Eigenloss\")\n",
+        "plt.legend()\n",
+        "plt.show()"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "xXAyU0n95EVm",
       "metadata": {
         "id": "xXAyU0n95EVm"
@@ -957,6 +980,29 @@
         "latent_vector = torch.randn(16, latent_dim, 1, 1).float().to(device)\n",
         "generated_images = generator(latent_vector)\n",
         "display(generated_images)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "id": "5b665f53",
+      "metadata": {},
+      "source": [
+        "Use the checkpoint"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f8fa9cf7",
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "best_generator = Generator(latent_dim).to(device)\n",
+        "best_generator.load_state_dict(torch.load('generator.pth'))\n",
+        "best_generator.eval()\n",
+        "latent_vector = torch.randn(16, latent_dim, 1, 1).float().to(device)\n",
+        "generated_images = best_generator(latent_vector)\n",
+        "display(generated_images)\n"
       ]
     },
     {
